--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,21 @@
     "dev": "ts-node src/index.ts",
     "dev:worker": "nodemon src/worker.ts",
     "test-server": "ts-node src/test.ts",
-    "test": "jest"
+    "test": "jest",
+    "launch-scan": "ts-node launch-scan.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.59.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
