--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "dev:worker": "nodemon src/worker.ts",
+    "clear:queue": "ts-node clear-queue.ts",
     "test-server": "ts-node src/test.ts",
     "test": "jest",
     "launch-scan": "ts-node launch-scan.ts"
@@ -15,7 +16,7 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.18.0",
     "@types/cors": "^2.8.19",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -47,7 +48,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
     "jest": "^30.2.0",
-    "prisma": "^6.16.2",
+    "prisma": "^6.18.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
